src/QL.Parser/AntlrGenerated/QLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/rszemplinski/projects/dotnet/QLShell/QL.Parser/QL.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class QLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		LOCAL=1, REMOTE=2, WS=3, COMMENT=4, LINE_TERMINATOR=5, UNICODE_SCALAR_VALUE_HEX=6, 
		LETTERS=7, EXP=8, HEX=9, UNICODE=10, ESC=11, NAME_START=12, NAME=13, BOOLEAN=14, 
		NULL=15, STRING=16, NUMBER=17, FLOAT=18, FRACTIONAL=19, EXPONENT=20, INT=21, 
		VARIABLE=22, COLON=23, LPAREN=24, RPAREN=25, LBRACE=26, RBRACE=27, LBRACK=28, 
		RBRACK=29, PIPE=30, COMMA=31;
	public const int
		RULE_document = 0, RULE_action_type = 1, RULE_action_block = 2, RULE_context_blocks = 3, 
		RULE_context_block = 4, RULE_local_context_block = 5, RULE_remote_context_block = 6, 
		RULE_selection_set = 7, RULE_selection = 8, RULE_field = 9, RULE_args = 10, 
		RULE_arg = 11, RULE_transformations = 12, RULE_transformation = 13, RULE_value = 14, 
		RULE_list = 15, RULE_object_field = 16, RULE_object = 17;
	public static readonly string[] ruleNames = {
		"document", "action_type", "action_block", "context_blocks", "context_block", 
		"local_context_block", "remote_context_block", "selection_set", "selection", 
		"field", "args", "arg", "transformations", "transformation", "value", 
		"list", "object_field", "object"
	};

	private static readonly string[] _LiteralNames = {
		null, "'local'", "'remote'", null, null, null, null, null, null, null, 
		null, null, null, null, null, "'null'", null, null, null, null, null, 
		null, null, "':'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'|'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "LOCAL", "REMOTE", "WS", "COMMENT", "LINE_TERMINATOR", "UNICODE_SCALAR_VALUE_HEX", 
		"LETTERS", "EXP", "HEX", "UNICODE", "ESC", "NAME_START", "NAME", "BOOLEAN", 
		"NULL", "STRING", "NUMBER", "FLOAT", "FRACTIONAL", "EXPONENT", "INT", 
		"VARIABLE", "COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
		"RBRACK", "PIPE", "COMMA"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "QL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static QLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public QLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public QLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Action_blockContext action_block() {
			return GetRuleContext<Action_blockContext>(0);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36;
			action_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Action_typeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(QLParser.NAME, 0); }
		public Action_typeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction_type(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Action_typeContext action_type() {
		Action_typeContext _localctx = new Action_typeContext(Context, State);
		EnterRule(_localctx, 2, RULE_action_type);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			Match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Action_blockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Action_typeContext action_type() {
			return GetRuleContext<Action_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(QLParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Context_blocksContext context_blocks() {
			return GetRuleContext<Context_blocksContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(QLParser.RBRACE, 0); }
		public Action_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Action_blockContext action_block() {
		Action_blockContext _localctx = new Action_blockContext(Context, State);
		EnterRule(_localctx, 4, RULE_action_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			action_type();
			State = 41;
			Match(LBRACE);
			State = 42;
			context_blocks();
			State = 43;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Context_blocksContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Context_blockContext[] context_block() {
			return GetRuleContexts<Context_blockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Context_blockContext context_block(int i) {
			return GetRuleContext<Context_blockContext>(i);
		}
		public Context_blocksContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_context_blocks; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContext_blocks(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Context_blocksContext context_blocks() {
		Context_blocksContext _localctx = new Context_blocksContext(Context, State);
		EnterRule(_localctx, 6, RULE_context_blocks);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 45;
				context_block();
				}
				}
				State = 48;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==LOCAL || _la==REMOTE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Context_blockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Remote_context_blockContext remote_context_block() {
			return GetRuleContext<Remote_context_blockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Local_context_blockContext local_context_block() {
			return GetRuleContext<Local_context_blockContext>(0);
		}
		public Context_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_context_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContext_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Context_blockContext context_block() {
		Context_blockContext _localctx = new Context_blockContext(Context, State);
		EnterRule(_localctx, 8, RULE_context_block);
		try {
			State = 52;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case REMOTE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 50;
				remote_context_block();
				}
				break;
			case LOCAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 51;
				local_context_block();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Local_context_blockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOCAL() { return GetToken(QLParser.LOCAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Selection_setContext selection_set() {
			return GetRuleContext<Selection_setContext>(0);
		}
		public Local_context_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_local_context_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocal_context_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Local_context_blockContext local_context_block() {
		Local_context_blockContext _localctx = new Local_context_blockContext(Context, State);
		EnterRule(_localctx, 10, RULE_local_context_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(LOCAL);
			State = 55;
			selection_set();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Remote_context_blockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REMOTE() { return GetToken(QLParser.REMOTE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgsContext args() {
			return GetRuleContext<ArgsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Selection_setContext selection_set() {
			return GetRuleContext<Selection_setContext>(0);
		}
		public Remote_context_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_remote_context_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRemote_context_block(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Remote_context_blockContext remote_context_block() {
		Remote_context_blockContext _localctx = new Remote_context_blockContext(Context, State);
		EnterRule(_localctx, 12, RULE_remote_context_block);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			Match(REMOTE);
			State = 58;
			args();
			State = 59;
			selection_set();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Selection_setContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(QLParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(QLParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SelectionContext[] selection() {
			return GetRuleContexts<SelectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectionContext selection(int i) {
			return GetRuleContext<SelectionContext>(i);
		}
		public Selection_setContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selection_set; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelection_set(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Selection_setContext selection_set() {
		Selection_setContext _localctx = new Selection_setContext(Context, State);
		EnterRule(_localctx, 14, RULE_selection_set);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			Match(LBRACE);
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 62;
				selection();
				}
				}
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==NAME );
			State = 67;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		public SelectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectionContext selection() {
		SelectionContext _localctx = new SelectionContext(Context, State);
		EnterRule(_localctx, 16, RULE_selection);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			field();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(QLParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgsContext args() {
			return GetRuleContext<ArgsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TransformationsContext transformations() {
			return GetRuleContext<TransformationsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Selection_setContext selection_set() {
			return GetRuleContext<Selection_setContext>(0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_field; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitField(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FieldContext field() {
		FieldContext _localctx = new FieldContext(Context, State);
		EnterRule(_localctx, 18, RULE_field);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(NAME);
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN) {
				{
				State = 72;
				args();
				}
			}

			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PIPE) {
				{
				State = 75;
				transformations();
				}
			}

			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LBRACE) {
				{
				State = 78;
				selection_set();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(QLParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgContext[] arg() {
			return GetRuleContexts<ArgContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgContext arg(int i) {
			return GetRuleContext<ArgContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(QLParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(QLParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(QLParser.COMMA, i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_args; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgsContext args() {
		ArgsContext _localctx = new ArgsContext(Context, State);
		EnterRule(_localctx, 20, RULE_args);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			Match(LPAREN);
			State = 82;
			arg();
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 83;
				Match(COMMA);
				State = 84;
				arg();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(QLParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(QLParser.COLON, 0); }
		public ArgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arg; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgContext arg() {
		ArgContext _localctx = new ArgContext(Context, State);
		EnterRule(_localctx, 22, RULE_arg);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NAME) {
				{
				State = 92;
				Match(NAME);
				State = 93;
				Match(COLON);
				}
			}

			State = 96;
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TransformationsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TransformationContext[] transformation() {
			return GetRuleContexts<TransformationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TransformationContext transformation(int i) {
			return GetRuleContext<TransformationContext>(i);
		}
		public TransformationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_transformations; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTransformations(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TransformationsContext transformations() {
		TransformationsContext _localctx = new TransformationsContext(Context, State);
		EnterRule(_localctx, 24, RULE_transformations);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 98;
				transformation();
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==PIPE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TransformationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIPE() { return GetToken(QLParser.PIPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(QLParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgsContext args() {
			return GetRuleContext<ArgsContext>(0);
		}
		public TransformationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_transformation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTransformation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TransformationContext transformation() {
		TransformationContext _localctx = new TransformationContext(Context, State);
		EnterRule(_localctx, 26, RULE_transformation);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(PIPE);
			State = 104;
			Match(NAME);
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN) {
				{
				State = 105;
				args();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(QLParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(QLParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(QLParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOLEAN() { return GetToken(QLParser.BOOLEAN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NULL() { return GetToken(QLParser.NULL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectContext @object() {
			return GetRuleContext<ObjectContext>(0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IQLVisitor<TResult> typedVisitor = visitor as IQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 28, RULE_value);
		try {
			State = 115;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case VARIABLE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 108;
				Match(VARIABLE);
				}
				break;
			case NUMBER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 109;
				Match(NUMBER);
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 3);
				{
				State = 110;
				Match(STRING);
				}
				break;
			case BOOLEAN:
				EnterOuterAlt(_localctx, 4);
				{
				State = 111;
				Match(BOOLEAN);
				}
				break;
			case NULL:
				EnterOuterAlt(_localctx, 5);
				{
				State = 112;
				Match(NULL);
				}
				break;
			case LBRACK:
				EnterOuterAlt(_localctx, 6);
				{
				State = 113;
				list();
				}
				break;
			case LBRACE:
				EnterOuterAlt(_localctx, 7);
				{
				State = 114;
				@object();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
